After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 755154 - win32appinfo: incorrect gsize printf format building for win64
win32appinfo: incorrect gsize printf format building for win64
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: build
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2015-09-17 10:41 UTC by Matthew Waters (ystreet00)
Modified: 2015-09-21 13:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
win32appinfo: fix incorrect printf specifier (1.26 KB, patch)
2015-09-17 10:42 UTC, Matthew Waters (ystreet00)
committed Details | Review

Description Matthew Waters (ystreet00) 2015-09-17 10:41:18 UTC
see commit message
Comment 1 Matthew Waters (ystreet00) 2015-09-17 10:42:25 UTC
Created attachment 311539 [details] [review]
win32appinfo: fix incorrect printf specifier
Comment 2 Matthias Clasen 2015-09-17 16:26:34 UTC
Review of attachment 311539 [details] [review]:

Looks good, thanks